--- a/index5.html
+++ b/index5.html
@@ -433,10 +433,23 @@
                 </div>
                 <div class="item">
                     <div class="item__content item__content--small">
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="item__content item__content--medium">
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                            저도 이렇게 만들고 싶어요!
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
+                        </div>
                     </div>
                 </div>
                 <div class="item">
@@ -453,6 +466,13 @@
                 </div>
                 <div class="item">
                     <div class="item__content item__content--large">
+                        <div class="text">
+                            사이트가 너무 이쁩니다.
+                            저도 이렇게 만들고 싶어요!
+                        </div>
+                        <div class="date">
+                            2023.04.04 누군가가
+                        </div>
                     </div>
                 </div>
                 <div class="item">
