--- a/index6.html
+++ b/index6.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style5.css">
+    <link rel="stylesheet" href="./assets/css/style6.css">
 
     <title>portfolio</title>
 </head>
@@ -13,122 +13,69 @@
 
     <div id="main">
         <header id="header">
-            <div class="header__inner">
-                <h1 class="logo">
-                    <span>port</span>
-                    <span>folio</span>
-                </h1>
-                <nav class="menu bg">
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Site</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
+            <h1 class="logo">
+                <span>port</span>
+                <span>folio</span>
+            </h1>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Work</a></li>
+                    <li><a href="#">Site</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
         <div id="section1">
             <div class="nav__msg split">
                 <ul>
-                    <li>새로운 배움을 즐기며, 무슨 일이든 꾸준히 즐기면서 하다보면<br />
-                        무엇이든 가능하다고 생각합니다. 분야를 가리지 않고 항상<br />
-                        적극적으로 배우는 자세를 잃지 않겠습니다. 작은 디테일까지<br />
-                        꼼꼼히 신경 쓰는 개발자가 되기 위해 끊임없이 노력하겠습니다.</li>
-                    <!-- <li>어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고<br />
-                        생각합니다. 신입의 열정과 도전정신을 깊숙히 새기며<br />
-                        배움에 있어 겸손함을 유지하며 세부적인 곳까지 파고드는<br />
-                        개발자가 되겠습니다.</li> -->
+                    <li>새로운 배움의 즐거움을 만끽하며, 어떤 일이든 꾸준히 즐기면서 도전하다 보면 불가능한 것은 없다고
+                        믿습니다. <br />분야를 가리지 않고 항상 적극적으로 배우는 자세를 유지하며,<br />작은 디테일까지 꼼꼼히
+                        신경 쓰는 개발자가 되기 위해 끊임없이 노력하겠습니다. <br />매일의 배움과 성장이 곧 저의 가능성을
+                        확장시킨다고 생각합니다.
+                    </li>
                 </ul>
             </div>
             <div class="sky">
             </div>
             <div class="black">
                 <div class="black__btn">
+                    <div class="scroll">Scroll</div>
                     <div class="down__btn">
-                        <svg stroke="currentColor" fill="#D6E5FA" stroke-width="0" viewBox="0 0 448 512"
-                            class="arrowDown" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z">
-                            </path>
-                        </svg>
                     </div>
-                    <div class="scroll__down">Scroll Down</div>
                 </div>
             </div>
         </div>
         <div id="section2">
-            <div class="section2-1">
-                <ul>
-                    <li>
-                        <p class="word word1">There </p>
-                        <p class="word word2">are</p>
-                        <p class="img img1"></p>
-                    </li>
-                    <li>
-                        <p class="word word3">trials, </p>
-                        <p class="img img2"></p>
-                        <p class="word word4">but </p>
-                    </li>
-                    <li>
-                        <p class="img img3"></p>
-                        <p class="word word5">there </p>
-                        <p class="word word6">are </p>
-                    </li>
-                    <li>
-                        <p class="word word7">no </p>
-                        <p class="img img4"></p>
-                        <p class="word word8">failures</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="section2-2">
+            <div class="about">
                 <div class="sec__title split">
-                    I LOVE CODING ABOUT ME
+                    About(2024)
                 </div>
                 <div class="sec__msg split">
                     <ul>
-                        <li>After earning a degree in computer science and working
-                            in the semiconductor field for 10 years, I used government
-                            subsidies to return to my roots as a developer. I am now
+                        <li class="desc1">After earning a degree in computer science and working
+                            in the semiconductor field for 8 years, I used government
+                            subsidies to return to my roots as a developer.<br /> I am now
                             working on projects with talented individuals and
-                            constantly improving my skills.</li>
-                        <!-- <li>After graduating from the Department of Computer Science
-                            and starting my career in the semiconductor field 10 years
-                            ago, I began studying again with government funding to
-                            utilize my major and try again as a developer, and worked
-                            on projects with talented people. I am constantly working
-                            to improve my skills.</li> -->
-                        <!-- <li>There is no design without logos and brands. In a world
-                            increasingly involved with social network, we often forget
-                            how powerful a logo can be. I love designing visual
-                            identities and am always looking for new branding
-                            projects.</li> -->
+                            constantly improving my skills.
+                        </li>
+                        <li class="desc2">복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해 코드를 한 줄씩<br />꼼꼼히
+                            검토하는 것을 중요하게 생각합니다. <br />문제를 해결한 후 느끼는 성취감과 즐거움은 저에게 큰
+                            동기부여가 됩니다.
+                        </li>
                     </ul>
                 </div>
-            </div>
-            <div class="section2-3">
-                <div class="sec__profile">
-                    <div class="profile__photo">
-                        <div class="img"></div>
-                    </div>
-                    <div class="profile__msg">
-                        <ul>
-                            <li>복잡한 문제를 마주할 때마다, 한 걸음 물러서서 단위 테스트를 통해<br />
-                                코드를 한 줄씩 꼼꼼히 검토하는 것을 중요하게 생각합니다. 문제를 해결한 <br />
-                                후 느끼는 성취감과 즐거움은 저에게 큰 동기부여가 됩니다.</li>
-                            <!-- <li>어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다. <br />
-                                신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며 <br />
-                                세부적인 곳까지 파고드는 개발자가 되겠습니다.</li> -->
-                        </ul>
-                    </div>
+                <div class="img">
+                    <div class="img1"></div>
+                    <div class="img2"></div>
+                    <div class="img3"></div>
                 </div>
             </div>
         </div>
         <div id="section3">
             <div class="sec__title split">
-                I LOVE CODING SKILL REVIEW
+                Skill(2024)
             </div>
             <div class="skill">
                 <div class="columns left">
@@ -142,6 +89,9 @@
                             <div class="item">
                                 <span>CLASS</span>
                                 <span>2024</span>
+                            </div>
+                            <div class="text">
+                                HTML을 활용해 웹 페이지의 기본 구조를 설계하고, 다양한 요소를 활용하여 콘텐츠를 체계적으로 배치하여 직관적이고 깔끔한 웹 페이지를 만들 수 있습니다.
                             </div>
                         </div>
 
@@ -157,6 +107,10 @@
                                 <span>CLASS</span>
                                 <span>2024</span>
                             </div>
+                            <div class="text">
+                                PHP를 활용해 데이터베이스 연동 및 세션 관리를 통해 사이트를 만든 적이 있습니다. 프로젝트를 통해 게시판, 댓글 기능을 구현해 본 경험이
+                                있습니다.
+                            </div>
                         </div>
 
                     </div>
@@ -170,6 +124,9 @@
                             <div class="item">
                                 <span>CLASS</span>
                                 <span>2024</span>
+                            </div>
+                            <div class="text">
+                                React Hooks 사용이 가능하고, redux 등의 상태 관리 라이브러리 사용경험이 있습니다.
                             </div>
                         </div>
 
@@ -216,6 +173,10 @@
                                 <span>CLASS</span>
                                 <span>2024</span>
                             </div>
+                            <div class="text">
+                                CSS를 이용해 반응형 웹 디자인을 구현하고, 다양한 디바이스에서도 일관된 사용자 경험을 제공합니다. Flex와 Grid 레이아웃을 사용하여 복잡한
+                                레이아웃을 간편하게 구성할 수 있습니다.
+                            </div>
                         </div>
 
                     </div>
@@ -230,6 +191,10 @@
                                 <span>CLASS</span>
                                 <span>2024</span>
                             </div>
+                            <div class="text">
+                                jQuery를 사용해 DOM 조작, 이벤트 처리를 간편하게 수행할 수 있습니다. 다양한 플러그인을 활용하거나 직접 작성하여 웹 애플리케이션의 기능을 향상시킬
+                                수 있습니다.
+                            </div>
                         </div>
 
                     </div>
@@ -243,6 +208,9 @@
                             <div class="item">
                                 <span>CLASS</span>
                                 <span>2024</span>
+                            </div>
+                            <div class="text">
+                                Vue.js 사용 경험이 있습니다.
                             </div>
                         </div>
 
@@ -272,6 +240,9 @@
                                 <span>CLASS</span>
                                 <span>2024</span>
                             </div>
+                            <div class="text">
+                                FIGMA로 사이트 디자인이 가능합니다.
+                            </div>
                         </div>
 
                     </div>
@@ -289,6 +260,9 @@
                                 <span>CLASS</span>
                                 <span>2024</span>
                             </div>
+                            <div class="text">
+                                프로젝트를 통해
+                            </div>
                         </div>
 
                     </div>
@@ -303,6 +277,9 @@
                                 <span>CLASS</span>
                                 <span>2024</span>
                             </div>
+                            <div class="text">
+                                python을 이용해 크롤링을 해본 경험이 있습니다.
+                            </div>
                         </div>
 
                     </div>
@@ -316,6 +293,9 @@
                             <div class="item">
                                 <span>CLASS</span>
                                 <span>2024</span>
+                            </div>
+                            <div class="text">
+                                SASS를 이용해 프로젝트를 만들어 본 경험이 있습니다. tailwind를 사용해본 적이 있습니다.
                             </div>
                         </div>
 
@@ -418,7 +398,10 @@
             </section>
         </div>
         <div id="section5">
-            <h4>COMMENT</h4>
+            <div class="title">
+                <h4>COMMENT</h4>
+                <input type="text" placeholder="여기에 댓글을 써주세요!" />
+            </div>
             <div class="masonry">
                 <div class="item">
                     <div class="item__content">
@@ -541,6 +524,10 @@
                     <p>
                         <a href="#">fdcwrt@gmail.com</a>
                     </p>
+                    <p>CERTIFICATE</p>
+                    <p>정보처리 기능사</p>
+                    <p>웹디자인 기능사</p>
+                    <p>컴퓨터활용능력 1급</p>
                 </div>
             </div>
         </div>
